# praktika-Toska010

./: Repo Jungtis.txt  Repo skiriasi MERGE.txt  Zaidimo pull.txt  Zaidimo push.txt  Zaidimo setup ir pull.txt
Zaidimas/: CMakeLists.txt  main.cpp
